--- a/changed/templates/changed/signup.html
+++ b/changed/templates/changed/signup.html
@@ -20,6 +20,7 @@
         <input type="text", id="password", name="password">
         <input type="submit", value="Signup">
     </form>
+    <a href="{% url 'changed:index' %}">Click here to go back to login</a>
     
 </body>
 </html>
