Add footer to login, signup

--- a/changed/templates/changed/login.html
+++ b/changed/templates/changed/login.html
@@ -83,5 +83,10 @@
         </div>
     </div>
 </body>
+<footer class="bg-light text-center text-lg-start fixed-bottom">
+    <div class="text-center p-3" style="background-color:#465C69; color:white">
+        © 2021 B-25
+    </div>
+</footer>
 
 </html>
