--- a/changed/templates/changed/home.html
+++ b/changed/templates/changed/home.html
@@ -45,8 +45,7 @@
 
 
 <body>
-        Welcome to What's Changed, {{user.username}}!
-        <div id="map" style="width:80vw"></div>
+        <div id="map" style="width:70vw; height: 80vh; margin:10px;"></div>
         <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrYWeLC6OAajZ2aeRChE1RrV8bcpa3Buc&callback=initMap&libraries=&v=weekly"
                 async></script>
